[gd_scene load_steps=17 format=2]

[ext_resource path="res://Entities/Enemies/Evilclone/EvilClone.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Evilclone/health.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/PlayerSprites/Idle0.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/PlayerSprites/Run0.png" type="Texture" id=4]
[ext_resource path="res://Entities/Player/PlayerSprites/Run1.png" type="Texture" id=5]
[ext_resource path="res://Entities/Player/PlayerSprites/Run2.png" type="Texture" id=6]
[ext_resource path="res://Entities/Player/PlayerSprites/Run3.png" type="Texture" id=7]
[ext_resource path="res://Entities/Player/PlayerSprites/Run4.png" type="Texture" id=8]
[ext_resource path="res://Entities/Player/PlayerSprites/Run7.png" type="Texture" id=9]
[ext_resource path="res://Entities/Enemies/Evilclone/EvilCloneSprites/Idle0.png" type="Texture" id=10]
[ext_resource path="res://Entities/Enemies/Evilclone/areaDetection.gd" type="Script" id=11]
[ext_resource path="res://Entities/Enemies/Evilclone/touchingArea.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), null, ExtResource( 10 ), null, ExtResource( 10 ), null, ExtResource( 10 ), null, ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 29.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 220.0
height = 350.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 18.0
height = 32.0

[node name="EvilClone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="health" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.294118, 0, 1 )
frames = SubResource( 1 )
animation = "dead"

[node name="shootingDelay" type="Timer" parent="."]
wait_time = 0.5

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 42, 0 )

[node name="Label" type="Label" parent="."]
margin_left = -33.2819
margin_top = -47.7245
margin_right = 34.7181
margin_bottom = -33.7245
align = 1

[node name="entityCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="areaDetection" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 11 )

[node name="detectionShape" type="CollisionShape2D" parent="areaDetection"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="touchingArea" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="touchingArea"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[connection signal="timeout" from="shootingDelay" to="." method="_on_shootingDelay_timeout"]
